--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,3 @@
 {
-    "vsintellicode.modify.editor.suggestSelection": "choseToUpdateConfiguration",
-    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
-    "window.zoomLevel": 0,
-    "java.home": "C:\\Program Files\\Java\\jdk-11.0.7",
-    "java.semanticHighlighting.enabled": false,
-    "C_Cpp.updateChannel": "Insiders",
-    "code-runner.clearPreviousOutput": true,
-    "code-runner.runInTerminal": true,
-    "workbench.iconTheme": "material-icon-theme",
-    "editor.formatOnSave": true,
-    "python.languageServer": "Microsoft",
-    "editor.tabSize": 1000,
-    "editor.suggestSelection": "recentlyUsed",
-    "git.autofetch": true,
-    "git.confirmSync": false,
-    "git.enableSmartCommit": true,
-    "liveServer.settings.donotShowInfoMsg": true,
-    "[jsonc]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
-  }
-  
+ "editor.tabSize": 4
+}
